fix dark mode timeout modal readability

--- a/src/public/includes/css/variables-dark.css
+++ b/src/public/includes/css/variables-dark.css
@@ -204,3 +204,12 @@ table .dt-type-numeric a:hover {
 .ticket-status-notification .success {
 	background-color: var(--success-color);
 }
+
+/*
+=================================================================================
+Timeout Modal color fixing
+=================================================================================
+*/
+#timeoutModal * {
+	color: var(--theme-black) !important;
+}
